<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateUsersActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageViewBackEditDel"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updatedelete_users"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/lineEditDel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="25sp">
        <EditText
            android:id="@+id/editTextNamaEditDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:autofillHints="name"
            />
        <EditText
            android:id="@+id/editTextAlamatEditDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:autofillHints="name" />
        <EditText
            android:id="@+id/editTextEmailEditDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />
        <EditText
            android:id="@+id/editTextPhoneEditDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="phone"
            android:autofillHints="phone" />
        <EditText
            android:id="@+id/editTextPendidikanEditDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pendidikan"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:autofillHints="name" />
        <EditText
            android:id="@+id/editTextTtlEditDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ttl"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:autofillHints="name" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/update"/>
            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:text="@string/delete"/>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_circulareditDel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>