<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InsertNewUsersActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageViewBackAdd"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_users"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/lineadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="25sp">
        <EditText
            android:id="@+id/editTextNamaAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:autofillHints="name"
            />
        <EditText
            android:id="@+id/editTextAlamatAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:autofillHints="name" />
        <EditText
            android:id="@+id/editTextEmailAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />
        <EditText
            android:id="@+id/editTextPhoneAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="phone"
            android:autofillHints="phone" />
        <EditText
            android:id="@+id/editTextPendidikanAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pendidikan"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:autofillHints="name" />
        <EditText
            android:id="@+id/editTextTtlAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ttl"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:autofillHints="name" />
        <Button
            android:id="@+id/buttonSimpanAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/simpan"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_circularadd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>