<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardUseCompatPadding="true"
        app:cardMaxElevation="20dp"
        app:cardCornerRadius="20dp"
        app:cardPreventCornerOverlap="true"
        android:layout_margin="25dp">
        <LinearLayout
            android:id="@+id/lineClickItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewNamaItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:hint="@string/nama_lengkap"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>
            <TextView
                android:id="@+id/textViewEmailItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:hint="@string/email"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>
            <TextView
                android:id="@+id/textViewAlamatItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:hint="@string/alamat"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>
            <TextView
                android:id="@+id/textViewPhoneItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:hint="@string/phone"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>
            <TextView
                android:id="@+id/textViewTTLItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:hint="@string/ttl"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>
            <TextView
                android:id="@+id/textViewPendidikanItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:hint="@string/pendidikan"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>